# lover

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  buildWin64
.github/workflows/: rust.yml
aur/: README.txt
aur/lover/: PKGBUILD
aur/lover-git/: PKGBUILD
aur/stable/: PKGBUILD
aur/unstable/: PKGBUILD
lib/: README.txt
src/: actions.rs  appimage.rs  build.rs  command_input.rs  config.rs  console.rs  deps.rs  env.lua  files.rs  http.rs  lovebrew_bundler.rs  main.rs  meta.rs  output.rs  project_config.rs  project_maker.rs  targets.rs  util.rs
src/lua/template/: .gitignore
src/template/: .gitignore
src/template/src/: main.lua
src/testData/projects/: generic.toml  invalidSyntax.toml  missingName.toml  old.toml
src/testData/projects/project/: lover.toml
src/testData/projects/project/src/: main.lua  optimized.lua  unoptimized.lua
src/testData/releases/: love.json  lover.json  rcedit.json
