[package]
name = "lover"
version = "1.3.0"
authors = ["Wolfyxon"]
repository = "https://github.com/wolfyxon/lover"
documentation = "https://github.com/Wolfyxon/lover/wiki"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8",  features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ansi_term = "0.12.1"
toml = "0.8.19"
zip = "2.2.0"
dirs = "5.0.1"
regex = "1.11.0"
image = "0.25.4"
backhand = "0.18.0"
